--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "defaults": "^1.0.0",
     "ejs": "~2.4.1",
     "express": "~4.14.0",
+    "express-session": "~1.13.0",
     "path": "^0.12.7",
     "uuid": "^3.1.0"
   },
