--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "scripts": {},
   "dependencies": {
     "body-parser": "~1.14.2",
+    "co":"^4.6.0",
+    "crypto":"^0.0.3",
     "defaults": "^1.0.0",
     "ejs": "~2.4.1",
     "express": "~4.14.0",
     "express-session": "~1.13.0",
+    "fs": "~0.0.1-security",
+    "mysql": "^2.11.1",
     "path": "^0.12.7",
+    "promise-mysql": "^1.3.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {}
