--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {},
   "dependencies": {
     "body-parser": "~1.14.2",
-    "co":"^4.6.0",
-    "crypto":"^0.0.3",
+    "co": "^4.6.0",
+    "crypto": "^0.0.3",
     "defaults": "^1.0.0",
     "ejs": "~2.4.1",
     "express": "~4.14.0",
@@ -19,6 +19,7 @@
     "mysql": "^2.11.1",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
+    "request": "^2.85.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {}
