--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
     "request": "^2.85.0",
+    "sha512": "0.0.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {}
