--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.14.0",
     "express-session": "~1.13.0",
     "fs": "~0.0.1-security",
+    "js-base64": "^2.4.3",
     "mysql": "^2.11.1",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
