--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "mysql": "^2.11.1",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
-    "python.node": "^1.0.4",
+    "python-shell": "^0.5.0",
     "randbytes": "0.0.1",
     "request": "^2.85.0",
     "sha512": "0.0.1",
