--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "randbytes": "0.0.1",
     "request": "^2.85.0",
     "sha512": "0.0.1",
+    "smtp-server": "^3.4.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {}
