--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "~1.13.0",
     "fs": "~0.0.1-security",
     "js-base64": "^2.4.3",
+    "mailin": "^3.0.4",
     "mysql": "^2.11.1",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
