--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "crypto": "^0.0.3",
     "defaults": "^1.0.0",
     "ejs": "~2.4.1",
+    "events":"^1.1.1",
     "express": "~4.14.0",
     "express-session": "~1.13.0",
     "fs": "~0.0.1-security",
     "js-base64": "^2.4.3",
     "mailin": "^3.0.4",
     "mysql": "^2.11.1",
+    "neo4j": "^2.0.0-RC2",
+    "neo4j-driver": "^1.5.3",
     "path": "^0.12.7",
     "promise-mysql": "^1.3.2",
     "python-shell": "^0.5.0",
