--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "crypto": "^0.0.3",
     "defaults": "^1.0.0",
     "ejs": "~2.4.1",
-    "events":"^1.1.1",
+    "events": "^1.1.1",
     "express": "~4.14.0",
     "express-session": "~1.13.0",
     "fs": "~0.0.1-security",
@@ -28,6 +28,7 @@
     "python-shell": "^0.5.0",
     "randbytes": "0.0.1",
     "request": "^2.85.0",
+    "sendmail": "^1.4.1",
     "sha512": "0.0.1",
     "smtp-server": "^3.4.2",
     "uuid": "^3.1.0"
